# docs/swagger.yaml
@@ -9,9 +9,15 @@ definitions:
     type: object
   entity.Todo:
     properties:
+      complete:
+        type: boolean
+      createdAt:
+        type: string
       id:
         type: integer
       name:
+        type: string
+      updatedAt:
         type: string
     type: object
 info:
