# model/api/todo/todo_request.go
@@ -1,5 +1,6 @@
 package api
 
 type TodoRequest struct {
-	Name string `json:"name"`
+	Name     string `json:"name"`
+	Complete string `json:"complete"`
 }
