# model/api/todo/todo_response.go
@@ -1,6 +1,11 @@
 package api
 
+import "time"
+
 type TodoResponse struct {
-	Id   int    `json:"id"`
-	Name string `json:"name"`
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	Complete  bool      `json:"complete"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
