# model/entity/todo.go
@@ -1,6 +1,11 @@
 package entity
 
+import "time"
+
 type Todo struct {
-	Id   int
-	Name string
+	ID        uint `gorm:"primarykey"`
+	Name      string
+	Complete  bool
+	CreatedAt time.Time
+	UpdatedAt time.Time
 }
